# still

./: .gitignore  README.md  pyproject.toml
src/still/: __init__.py  _testing.py  config.py  eval.py  train.py
src/still/model/: attention.py  perceiver.py  wrapper.py
src/still/serve/: server.py
tests/: conftest.py  test_attention.py  test_compaction_inference.py  test_data.py  test_eval_smoke.py  test_perceiver.py  test_train_smoke.py
