[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "still"
version = "0.1.0"
description = "Neural KV cache compaction (STILL) via forward-KL distillation, HuggingFace-native"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.48.0",
    "datasets>=2.20.0",
    "accelerate>=0.34.0",
    "tqdm>=4.66.0",
]

[project.scripts]
still-preprocess = "still.data.preprocess:main"
still-train = "still.train:main"
still-eval = "still.eval:main"

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff"]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["F", "I"]
